# yundo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  EXECUTION_SUMMARY.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  README.md  compose.yaml  package-lock.json  package.json
.github/workflows/: ci.yml  docker-image.yml
docs/: distributed-storage-design.md
docs/distributed-storage/: api-design.md  frontend-migration.md  metadata-design.md  migration-implementation-testing.md  node-discovery-and-security.md  operations-and-repair.md  transfer-scheduling.md
frontend/: index.html  package.json  server.ts  vite.config.ts
frontend/server/: api.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/context/: I18nContext.tsx
frontend/src/pages/: Dashboard.tsx  FileBox.tsx  NotFound.tsx  Privacy.tsx  ProxyDash.tsx  Terms.tsx  WebProxy.tsx
frontend/src/types/: api.ts
frontend/src/utils/: basePath.ts  formatters.ts  seo.ts
nginx/: default.conf
references/: _worker.js
src/: app.rs  cache.rs  common.rs  config.rs  constants.rs  errors.rs  filebox.rs  filebox_utils.rs  handlers.rs  headers.rs  history.rs  lib.rs  main.rs  metrics.rs  middleware.rs  proxy.rs  seo.rs  ssrf.rs  state.rs  uploads.rs  web_proxy.rs
src/history/: db.rs  mod.rs  routes.rs
src/storage/: admin.rs  audit.rs  auth.rs  backend.rs  client.rs  discovery.rs  gc.rs  local.rs  mod.rs  node.rs  registration.rs  repair.rs  scheduler.rs
tests/: distributed_storage.rs  integration.rs
