[package]
name = "precision-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
