[package]
name = "precision-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "hickory-dns"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
tower = { version = "0.4", features = ["limit", "util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.5"
encoding_rs = "0.8"
flate2 = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
urlencoding = "2.1"
thiserror = "1.0"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
lru = "0.12"
hickory-resolver = "0.24"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
